--- a/tyrian-android/AndroidManifest.xml
+++ b/tyrian-android/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19" />
-    <application>
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="25" />
+    <application android:largeHeap="true" android:hardwareAccelerated="true" android:icon="@drawable/ic_launcher" android:label="Tyrian Remake" android:logo="@raw/loading">
         <activity android:name="AppTyrianAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
