--- a/com.b3dgs.tyrian.editor.product/pom.xml
+++ b/com.b3dgs.tyrian.editor.product/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.b3dgs.tyrian</groupId>
         <artifactId>tyrian-parent</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.3.0</version>
         <relativePath>../tyrian-parent</relativePath>
     </parent>
     <artifactId>com.b3dgs.tyrian.editor.product</artifactId>
