--- a/com.b3dgs.tyrian.target/.gitignore
+++ b/com.b3dgs.tyrian.target/.gitignore
@@ -4,3 +4,4 @@ org.eclipse.core.resources.prefs
 org.eclipse.m2e.core.prefs
 org.sonar.ide.eclipse.core.prefs
 org.eclipse.pde.core.prefs
+com.b3dgs.tyrian.platform.target
