--- a/com.b3dgs.tyrian.target/pom.xml
+++ b/com.b3dgs.tyrian.target/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.b3dgs.tyrian</groupId>
         <artifactId>tyrian-parent</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.3.0</version>
         <relativePath>../tyrian-parent</relativePath>
     </parent>
     <artifactId>com.b3dgs.tyrian.platform</artifactId>
@@ -23,15 +23,6 @@
             <plugin>
                 <groupId>lt.velykis.maven</groupId>
                 <artifactId>pde-target-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>pde-target</id>
-                        <goals>
-                            <goal>add-pom-dependencies</goal>
-                        </goals>
-                        <phase>none</phase>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
