--- a/tyrian-android/AndroidManifest.xml
+++ b/tyrian-android/AndroidManifest.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.b3dgs.tyrian"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="030"
+    android:versionName="0.3.0" >
 
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="25" />
-    <application android:largeHeap="true" android:hardwareAccelerated="true" android:icon="@drawable/ic_launcher" android:label="Tyrian Remake" android:logo="@raw/loading">
-        <activity android:name="AppTyrianAndroid">
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="25" />
+
+    <application
+        android:hardwareAccelerated="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="Tyrian Remake"
+        android:largeHeap="true"
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        <activity android:name="AppTyrianAndroid" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
