--- a/tyrian-game/pom.xml
+++ b/tyrian-game/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.b3dgs.tyrian</groupId>
         <artifactId>tyrian-parent</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.3.0</version>
         <relativePath>../tyrian-parent</relativePath>
     </parent>
     <artifactId>tyrian-game</artifactId>
