--- a/tyrian-parent/pom.xml
+++ b/tyrian-parent/pom.xml
@@ -3,19 +3,18 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <b3dgs.version>1.0.2</b3dgs.version>
         <buildtools-project>tyrian-buildtools</buildtools-project>
-        <lionengine.version>8.4.0-SNAPSHOT</lionengine.version>
+        <lionengine.version>8.4.0</lionengine.version>
     </properties>
     <parent>
         <groupId>com.b3dgs</groupId>
         <artifactId>b3dgs-parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.4</version>
     </parent>
     <groupId>com.b3dgs.tyrian</groupId>
     <artifactId>tyrian-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.3.1</version>
+    <version>0.3.2</version>
     <name>Tyrian Remake</name>
     <description>Remake of the original Tyrian on the DOS by Epic Games</description>
     <url>https://github.com/b3dgs/tyrian-remake</url>
@@ -38,6 +37,13 @@
             <modules>
                 <module>../tyrian-buildtools</module>
                 <module>../tyrian-game</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>plugins</id>
+            <modules>
+                <module>../com.b3dgs.tyrian.target</module>
+                <module>../com.b3dgs.tyrian.editor</module>
             </modules>
         </profile>
         <profile>
