--- a/tyrian-pc/pom.xml
+++ b/tyrian-pc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.b3dgs.tyrian</groupId>
         <artifactId>tyrian-parent</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.2</version>
         <relativePath>../tyrian-parent</relativePath>
     </parent>
     <artifactId>tyrian-pc</artifactId>
@@ -21,6 +21,11 @@
             <groupId>com.b3dgs.lionengine</groupId>
             <artifactId>lionengine-audio-wav</artifactId>
             <version>${lionengine.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.b3dgs.lionengine</groupId>
