--- a/tyrian-parent/pom.xml
+++ b/tyrian-parent/pom.xml
@@ -2,20 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <properties>
-        <buildtools-project>tyrian-buildtools</buildtools-project>
-        <lionengine.version>8.4.0</lionengine.version>
-    </properties>
     <parent>
         <groupId>com.b3dgs</groupId>
         <artifactId>b3dgs-parent</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.8</version>
     </parent>
     <groupId>com.b3dgs.tyrian</groupId>
     <artifactId>tyrian-parent</artifactId>
-    <packaging>pom</packaging>
-    <version>0.3.2</version>
+    <version>0.4.0</version>
     <name>Tyrian Remake</name>
+    <packaging>pom</packaging>
     <description>Remake of the original Tyrian on the DOS by Epic Games</description>
     <url>https://github.com/b3dgs/tyrian-remake</url>
     <organization>
@@ -28,42 +24,9 @@
         <developerConnection>scm:git:git@github.com:b3dgs/tyrian-remake.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
-    <profiles>
-        <profile>
-            <id>game</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>../tyrian-buildtools</module>
-                <module>../tyrian-game</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>plugins</id>
-            <modules>
-                <module>../com.b3dgs.tyrian.target</module>
-                <module>../com.b3dgs.tyrian.editor</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>editor</id>
-            <modules>
-                <module>../com.b3dgs.tyrian.target</module>
-                <module>../com.b3dgs.tyrian.editor</module>
-                <module>../com.b3dgs.tyrian.editor.product</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>target</id>
-            <modules>
-                <module>../tyrian-buildtools</module>
-                <module>../tyrian-game</module>
-                <module>../tyrian-android</module>
-                <module>../tyrian-pc</module>
-            </modules>
-        </profile>
-    </profiles>
+    <properties>
+        <lionengine.version>9.0.0-SNAPSHOT</lionengine.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.b3dgs.lionengine</groupId>
@@ -99,6 +62,48 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>game</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>../tyrian-game</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>editor</id>
+            <modules>
+                <module>../com.b3dgs.tyrian.target</module>
+                <module>../com.b3dgs.tyrian.editor</module>
+                <module>../com.b3dgs.tyrian.editor.product</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>pc</id>
+            <modules>
+                <module>../tyrian-game</module>
+                <module>../tyrian-pc</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
