Verbose removed. Checkstyle skipped. LionEngine 9.0.0-SNAPSHOT used.

--- a/tyrian-game/pom.xml
+++ b/tyrian-game/pom.xml
@@ -11,6 +11,9 @@
     <artifactId>tyrian-game</artifactId>
     <packaging>jar</packaging>
     <name>Tyrian Game</name>
+    <properties>
+        <checkstyle.skip>true</checkstyle.skip>
+    </properties>
     <build>
         <plugins>
             <plugin>
