--- a/tyrian-parent/pom.xml
+++ b/tyrian-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.b3dgs</groupId>
         <artifactId>b3dgs-parent</artifactId>
-        <version>1.0.8</version>
+        <version>1.0.9-SNAPSHOT</version>
     </parent>
     <groupId>com.b3dgs.tyrian</groupId>
     <artifactId>tyrian-parent</artifactId>
