--- a/com.b3dgs.tyrian.editor/pom.xml
+++ b/com.b3dgs.tyrian.editor/pom.xml
@@ -18,7 +18,7 @@
     </dependencies>
     <repositories>
         <repository>
-            <id>neon</id>
+            <id>oxygen</id>
             <url>http://download.eclipse.org/releases/oxygen</url>
             <layout>p2</layout>
         </repository>
