--- a/tyrian-parent/pom.xml
+++ b/tyrian-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.b3dgs</groupId>
         <artifactId>b3dgs-parent</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
     <groupId>com.b3dgs.tyrian</groupId>
     <artifactId>tyrian-parent</artifactId>
@@ -25,7 +25,7 @@
         <tag>HEAD</tag>
     </scm>
     <properties>
-        <lionengine.version>9.0.0</lionengine.version>
+        <lionengine.version>9.0.2-SNAPSHOT</lionengine.version>
     </properties>
     <dependencies>
         <dependency>
