--- a/tyrian-android/app/build.gradle
+++ b/tyrian-android/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     buildToolsVersion '28.0.3'
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.b3dgs.tyrian"
         minSdkVersion 26
-        targetSdkVersion 27
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -26,7 +26,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.b3dgs.lionengine:lionengine-core:9.0.0-SNAPSHOT'
-    implementation 'com.b3dgs.lionengine:lionengine-core-android:9.0.0-SNAPSHOT'
+    implementation 'com.b3dgs.lionengine:lionengine-core:9.0.0'
+    implementation 'com.b3dgs.lionengine:lionengine-core-android:9.0.0'
     implementation 'com.b3dgs.tyrian:tyrian-game:0.4.0'
 }
