--- a/tyrian-parent/.gitignore
+++ b/tyrian-parent/.gitignore
@@ -1,6 +1,7 @@
 /bin
 /target
 /META-INF/
+/.settings
 org.eclipse.core.resources.prefs
 org.eclipse.m2e.core.prefs
 org.sonar.ide.eclipse.core.prefs
